# arbitrage-rust

./: .env  .env.example  .gitignore  Cargo.toml  TESTING_README.md  analyze_performance.py  run_perf.sh
analyze/: pyvenv.cfg
logs/: app.log.2025-05-09  triangular-arbitrage_20250512.log.2025-05-12-17  triangular-arbitrage_20250512.log.2025-05-12-18  triangular-arbitrage_20250513.log.2025-05-12-19  triangular-arbitrage_20250513.log.2025-05-13-13
performance_results/20250518_234303/: performance_results.csv
performance_results/20250518_235011/: performance_results.csv
src/: bash_script_content.txt  constants.rs  main.rs  python_script_content.txt
src/app/: mod.rs  normal_mode.rs  perf_mode.rs
src/arbitrage/: detector.rs  executor.rs  mod.rs
src/config/: mod.rs
src/enums/: side.rs
src/exchange/: binance.rs  client.rs  fix_api.rs  mock_fix_api.rs  mod.rs  rest_api_client.rs  sbe_client.rs
src/executor/: fix_executor.rs  mod.rs
src/helpers/: logger.rs  logic.rs  mod.rs
src/models/: binance_models.rs  config.rs  level.rs  mod.rs  orderbook.rs  step.rs  symbol.rs  symbol_map.rs  symbols.rs  triangle.rs  triangular_path.rs
src/models/sbe/: account_allocations_response_codec.rs  account_commission_response_codec.rs  account_order_rate_limit_response_codec.rs  account_prevented_matches_response_codec.rs  account_response_codec.rs  account_trades_response_codec.rs  account_type.rs  agg_trades_response_codec.rs  allocation_type.rs  average_price_response_codec.rs  balance_update_event_codec.rs  best_bid_ask_stream_event_codec.rs  book_ticker_response_codec.rs  book_ticker_symbol_response_codec.rs  bool_enum.rs  cancel_open_orders_response_codec.rs  cancel_order_list_response_codec.rs  cancel_order_response_codec.rs  cancel_replace_order_response_codec.rs  cancel_replace_status.rs  contingency_type.rs  depth_diff_stream_event_codec.rs  depth_response_codec.rs  depth_snapshot_stream_event_codec.rs  error_response_codec.rs  event_stream_terminated_event_codec.rs  exchange_info_response_codec.rs  exchange_max_num_algo_orders_filter_codec.rs  exchange_max_num_iceberg_orders_filter_codec.rs  exchange_max_num_orders_filter_codec.rs  execution_report_event_codec.rs  execution_type.rs  external_lock_update_event_codec.rs  filter_type.rs  floor.rs  group_size_16_encoding_codec.rs  group_size_encoding_codec.rs  iceberg_parts_filter_codec.rs  klines_response_codec.rs  list_order_status.rs  (+74 more)
src/monitor/: mod.rs  trading_monitor.rs
src/orderbook/: manager.rs  mod.rs  orderbook.rs
src/performance/: mod.rs
src/sbe/: mod.rs
src/simd/: avx2.rs  mod.rs  neon.rs
src/utils/: console.rs  logging.rs  mod.rs  serde_helpers.rs
