[package]
name = "rust-arb-optimized"
version = "0.1.0"
edition = "2024"


[dependencies]

# Async tools
futures = "0.3.30"
async-trait = "0.1.77"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tungstenite = "0.26.2"

# console color
colored = "3.0"
figlet-rs = "0.1.5"

# configuration via environment
dotenv = "0.15"

# Error handling
anyhow = { version = "1.0.98" }
thiserror = "2.0.12"

# serde serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# time utils
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.12.15", features = ["json"] }

# For concurrency
dashmap = "6.1.0"

strum = "0.27.1"
strum_macros = "0.27.1"


# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tracing-timing = "0.6.0"

# Decimal arithmetic for money
rust_decimal = { version = "1.33.1", features = ["serde"] }
rust_decimal_macros = "1.33.1"

rand = "0.9.1"
uuid = { version = "1.16.0", features = ["v4"] }
ordered-float = "5.0.0"

lazy_static = "1.4.0"

# bytes
byteorder = "1.5.0" # For handling endianness in binary data
bytes = "1.5.0"     # For working with byte buffers

#http
http = "1.3.1"
url = "2.5.4"

#rwlock
parking_lot = "0.12.3"
