[package]
name = "rust-arb-optimized"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug = false

# CPU-specific optimizations
[target.aarch64-apple-darwin]
rustflags = [
    "-C",
    "target-cpu=apple-m1",                # or apple-m2 for M2
    "-C",
    "target-feature=+neon,+fp16,+crypto",
    "-C",
    "link-arg=-Wl,-dead_strip",
]

[profile.pgo]
inherits = "release"
lto = true

[dependencies]

async-trait = "0.1.88"
figlet-rs = "0.1.5"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tungstenite = "0.26.2"

# console color
colored = "3.0"

# configuration via environment
dotenv = "0.15"

# Error handling
anyhow = { version = "1.0.98" }
thiserror = "2.0.12"

# serde serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# time utils
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.12.15", features = ["json"] }

# For concurrency
dashmap = "6.1.0"


# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tracing-timing = "0.6.0"

rand = "0.9.1"

lazy_static = "1.4.0"

# bytes
byteorder = "1.5.0" # For handling endianness in binary data
bytes = "1.5.0"     # For working with byte buffers

#http
http = "1.3.1"
url = "2.5.4"

#rwlock
parking_lot = "0.12.3"


crossbeam = "0.8.4" # For AtomicCell
ctrlc = "3.4.7"
rpmalloc = "0.2.2"

native-tls = "0.2.14"
base64 = "0.22.1"

ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
crossbeam-channel = "0.5.15"
